Fix icons on small screens

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10494,3 +10494,11 @@ body {
           justify-content: center;
 }
 
+#contactButtons {
+  padding-top: 40px;
+}
+
+#contactButtons a {
+  text-decoration: none !important;
+}
+
